refractor(css): adjust padding and details

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	</section>
 	 
 	<section id="portfolio" class="portfolio grid">
-		<h1><i>PORTFOLIO</i></h1>
+		<h1>PORTFOLIO</h1>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-2">
   			<ul class="slides">
 				<li>
@@ -179,41 +179,6 @@
 				</li>
 				<li>
 					<img src="img/bn-5.png" alt="Poster">
-				</li>
-			</ul>
-		</div>
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-2">
-  			<ul class="slides">
-				<li>
-					<img src="img/app-5.png" alt="Business Card">
-				</li>
-				<li>
-					<img src="img/app-2.png" alt="Stamp">
-				</li>
-				<li>
-					<img src="img/app-3.png" alt="T-Shirt">
-				</li>
-				<li>
-					<img src="img/app-4.png" alt="T-Shirt">
-				</li>
-				<li>
-					<img src="img/app-1.png" alt="T-Shirt">
-				</li>
-			</ul>
-		</div>
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-2">
-  			<ul class="slides">
-				<li>
-					<img src="img/hungry-sammys-1.png" alt="Poster">
-				</li>
-				<li>
-					<img src="img/hungry-sammys-2.png" alt="Poster">
-				</li>
-				<li>
-					<img src="img/hungry-sammys-4.png" alt="Poster">
-				</li>
-				<li>
-					<img src="img/hungry-sammys-3.png" alt="Poster">
 				</li>
 			</ul>
 		</div>
