refractor(css and html): edit images

--- a/index.html
+++ b/index.html
@@ -45,140 +45,167 @@
 	 
 	<section id="portfolio" class="portfolio grid">
 		<h1>PORTFOLIO</h1>
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-2">
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul class="slides">
 				<li>
-					<img src="img/eben-8.png" alt="YUSSO">
+					<img src="img/eben-8.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/eben-7.png" alt="YUSSO">
+					<img src="img/eben-7.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/eben-1.png" alt="YUSSO">
+					<img src="img/eben-1.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/eben-3.png" alt="YUSSO">
+					<img src="img/eben-3.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/eben-14.png" alt="YUSSO">
+					<img src="img/eben-14.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/eben-15.png" alt="YUSSO">
+					<img src="img/eben-15.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/eben-12.png" alt="YUSSO">
+					<img src="img/eben-12.png" alt="eben">
 				</li>
 			</ul>
 		</div>
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-2">
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul class="slides">
 				<li>
-					<img src="img/jem-4.png" alt="JEM">
+					<img src="img/jem-4.png" alt="jem">
 				</li>
 				<li>
-					<img src="img/v-2.png" alt="JEM">
+					<img src="img/jem-2.png" alt="jem">
 				</li>
 				<li>
-					<img src="img/jem-2.png" alt="JEM">
+					<img src="img/jem-8.png" alt="jem">
 				</li>
 				<li>
-					<img src="img/jem-55.png" alt="JEM">
-				</li>
-				<li>
-					<img src="img/dani-7.png" alt="DANI">
-				</li>
-				<li>
-					<img src="img/dani-3.png" alt="DANI">
-				</li>
-				<li>
-					<img src="img/dani-5.png" alt="DANI">
-				</li>
-				<li>
-					<img src="img/twin-4.png" alt="AYMI">
-				</li>
-				<li>
-					<img src="img/twin-3.png" alt="AYMI">
-				</li>
-				<li>
-					<img src="img/twin-5.png" alt="AYMI">
-				</li>
-				<li>
-					<img src="img/jem-100.png" alt="AYMI">
-				</li>
-				<li>
-					<img src="img/v-1.png" alt="AYMI">
-				</li>
-				<li>
-					<img src="img/jem-1.png" alt="AYMI">
+					<img src="img/jem-1.png" alt="jem">
 				</li>
 			</ul>
 		</div>
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-2">
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul class="slides">
 				<li>
-					<img src="img/concert-3.png" alt="HONG KONG LADY">
+					<img src="img/v-2.png" alt="victoria">
 				</li>
 				<li>
-					<img src="img/concert-4.png" alt="CYCLER">
+					<img src="img/twin-3.png" alt="aymi">
 				</li>
 				<li>
-					<img src="img/concert-8.png" alt="BERRIES">
+					<img src="img/twin-5.png" alt="aymi">
 				</li>
 				<li>
-					<img src="img/concert-7.png" alt="FERRY STREET">
+					<img src="img/v-1.png" alt="victoria">
 				</li>
 				<li>
-					<img src="img/concert-6.png" alt="HONG KONG CARS">
+					<img src="img/dani-7.png" alt="dani">
+				</li>
+				<li>
+					<img src="img/dani-3.png" alt="dani">
+				</li>
+				<li>
+					<img src="img/dani-6.png" alt="dani">
+				</li>
+				<li>
+					<img src="img/lammi.png" alt="lammi">
+				</li>
+				<li>
+					<img src="img/kelly-skate.png" alt="kelly">
+				</li>
+				<li>
+					<img src="img/twin-4.png" alt="aymi">
 				</li>
 			</ul>
 		</div>
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-2">
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul class="slides">
 				<li>
-					<img src="img/other-9.png" alt="HONG KONG LADY">
+					<img src="img/concert-3.png" alt="tegan-and-sara">
 				</li>
 				<li>
-					<img src="img/other-1.png" alt="CYCLER">
+					<img src="img/concert-8.png" alt="air-dubai">
 				</li>
 				<li>
-					<img src="img/other-2.png" alt="BERRIES">
+					<img src="img/concert-7.png" alt="mayday-parade">
 				</li>
 				<li>
-					<img src="img/other-3.png" alt="FERRY STREET">
+					<img src="img/concert-6.png" alt="air-dubai">
 				</li>
 				<li>
-					<img src="img/other-7.png" alt="HONG KONG CARS">
+					<img src="img/concert-4.png" alt="tegan-and-sara">
 				</li>
 			</ul>
 		</div>
-	</section>
-		<section id="portfolio" class="portfolio grid">
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-2">
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul class="slides">
 				<li>
-					<img src="img/xs-1.png" alt="Business Card">
+					<img src="img/food-milk-tea.png" alt="milk-tea">
 				</li>
 				<li>
-					<img src="img/xs-2.png" alt="Stamp">
+					<img src="img/food-macaroon.png" alt="macaroon">
 				</li>
 				<li>
-					<img src="img/xs-3.png" alt="T-Shirt">
+					<img src="img/food-bolthouse.png" alt="bolthouse">
 				</li>
 				<li>
-					<img src="img/xs-4.png" alt="T-Shirt">
+					<img src="img/food-brownie.png" alt="brownie">
 				</li>
 			</ul>
 		</div>
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-2">
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul class="slides">
 				<li>
-					<img src="img/bn-2.png" alt="Poster">
+					<img src="img/other-9.png" alt="hong-kong">
 				</li>
 				<li>
-					<img src="img/bn-3.png" alt="Poster">
+					<img src="img/other-1.png" alt="trail">
 				</li>
 				<li>
-					<img src="img/bn-5.png" alt="Poster">
+					<img src="img/other-2.png" alt="berries">
+				</li>
+				<li>
+					<img src="img/other-3.png" alt="niagara-falls">
+				</li>
+				<li>
+					<img src="img/other-7.png" alt="hong-kong">
+				</li>
+				<li>
+					<img src="img/other-3.png" alt="niagara-falls">
+				</li>
+			</ul>
+		</div>
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
+  			<ul class="slides">
+				<li>
+					<img src="img/xs-1.png" alt="business-card">
+				</li>
+				<li>
+					<img src="img/xs-2.png" alt="stamp">
+				</li>
+				<li>
+					<img src="img/xs-3.png" alt="t-shirt">
+				</li>
+				<li>
+					<img src="img/xs-4.png" alt="cd">
+				</li>
+				<li>
+					<img src="img/xs-3.png" alt="t-shirt">
+				</li>
+			</ul>
+		</div>
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
+  			<ul class="slides">
+				<li>
+					<img src="img/bn-3.png" alt="vinyl">
+				</li>
+				<li>
+					<img src="img/bn-2.png" alt="poster">
+				</li>
+					<li>
+					<img src="img/bn-5.png" alt="mockup">
 				</li>
 			</ul>
 		</div>
