docs(html): add image

--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
 					<img src="img/food-macaroon.png" alt="macaroon">
 				</li>
 				<li>
+					<img src="img/food-fruits.png" alt="fruits">
+				</li>
+				<li>
 					<img src="img/food-bolthouse.png" alt="bolthouse">
 				</li>
 				<li>
