refractor(html): add and edit photos

--- a/index.html
+++ b/index.html
@@ -95,9 +95,6 @@
 					<img src="img/twin-3.png" alt="aymi">
 				</li>
 				<li>
-					<img src="img/twin-5.png" alt="aymi">
-				</li>
-				<li>
 					<img src="img/v-1.png" alt="victoria">
 				</li>
 				<li>
@@ -118,6 +115,9 @@
 				<li>
 					<img src="img/twin-4.png" alt="aymi">
 				</li>
+				<li>
+					<img src="img/twin-5.png" alt="aymi">
+				</li>
 			</ul>
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
@@ -126,7 +126,7 @@
 					<img src="img/concert-3.png" alt="tegan-and-sara">
 				</li>
 				<li>
-					<img src="img/concert-8.png" alt="air-dubai">
+					<img src="img/concert-4.png" alt="air-dubai">
 				</li>
 				<li>
 					<img src="img/concert-7.png" alt="mayday-parade">
@@ -135,7 +135,7 @@
 					<img src="img/concert-6.png" alt="air-dubai">
 				</li>
 				<li>
-					<img src="img/concert-4.png" alt="tegan-and-sara">
+					<img src="img/concert-8.png" alt="tegan-and-sara">
 				</li>
 			</ul>
 		</div>
@@ -148,13 +148,16 @@
 					<img src="img/food-macaroon.png" alt="macaroon">
 				</li>
 				<li>
-					<img src="img/food-fruits.png" alt="fruits">
-				</li>
-				<li>
 					<img src="img/food-bolthouse.png" alt="bolthouse">
 				</li>
 				<li>
 					<img src="img/food-brownie.png" alt="brownie">
+				</li>
+				<li>
+					<img src="img/food-meat-pies.png" alt="brownie">
+				</li>
+				<li>
+					<img src="img/food-shawarma-crop.png" alt="brownie">
 				</li>
 			</ul>
 		</div>
@@ -164,7 +167,7 @@
 					<img src="img/other-9.png" alt="hong-kong">
 				</li>
 				<li>
-					<img src="img/other-1.png" alt="trail">
+					<img src="img/other-3.png" alt="trail">
 				</li>
 				<li>
 					<img src="img/other-2.png" alt="berries">
@@ -176,7 +179,7 @@
 					<img src="img/other-7.png" alt="hong-kong">
 				</li>
 				<li>
-					<img src="img/other-3.png" alt="niagara-falls">
+					<img src="img/other-1.png" alt="niagara-falls">
 				</li>
 			</ul>
 		</div>
