--- a/index.html
+++ b/index.html
@@ -43,171 +43,145 @@
 		<img class="main-logo" src="img/logo.svg" alt="Logo">
 	</section>
 	<section id="portfolio" class="portfolio grid">
-		<h1>PORTFOLIO</h1>
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul class="slides">
+		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
+  			<ul class="photos">
 				<li>
-					<img src="img/eben-8.png" alt="eben">
+					<img src="img/img-iggy-4.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/eben-7.png" alt="eben">
+					<img src="img/img-berries.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/eben-1.png" alt="eben">
+					<img src="img/img-food-brownie.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/eben-3.png" alt="eben">
+					<img src="img/img-biker.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/eben-14.png" alt="eben">
+					<img src="img/img-teganandsara.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/eben-15.png" alt="eben">
+					<img src="img/img-eben-2.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/eben-12.png" alt="eben">
-				</li>
-			</ul>
-		</div>
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul class="slides">
-				<li>
-					<img src="img/jem-4.png" alt="jem">
+					<img src="img/img-food-macaroon.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/jem-2.png" alt="jem">
+					<img src="img/img-nf.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/jem-8.png" alt="jem">
+					<img src="img/img-food-meat-pies.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/jem-1.png" alt="jem">
+					<img src="img/img-eben-6.png" alt="eben">
 				</li>
 			</ul>
 		</div>
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul class="slides">
+		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
+  			<ul class="photos">
 				<li>
-					<img src="img/v-2.png" alt="victoria">
+					<img src="img/img-airdubai.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/twin-3.png" alt="aymi">
+					<img src="img/img-eben-7.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/v-1.png" alt="victoria">
+					<img src="img/img-hodan-1.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/dani-7.png" alt="dani">
+					<img src="img/img-lammi.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/dani-3.png" alt="dani">
+					<img src="img/img-noah.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/dani-6.png" alt="dani">
+					<img src="img/img-jem-1.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/lammi.png" alt="lammi">
+					<img src="img/img-eddie-1.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/kelly-skate.png" alt="kelly">
+					<img src="img/img-bab-1.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/twin-4.png" alt="aymi">
+					<img src="img/img-hodan-2.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/twin-5.png" alt="aymi">
-				</li>
-			</ul>
-		</div>
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul class="slides">
-				<li>
-					<img src="img/concert-3.png" alt="tegan-and-sara">
-				</li>
-				<li>
-					<img src="img/concert-4.png" alt="air-dubai">
-				</li>
-				<li>
-					<img src="img/concert-7.png" alt="mayday-parade">
-				</li>
-				<li>
-					<img src="img/concert-6.png" alt="air-dubai">
-				</li>
-				<li>
-					<img src="img/concert-8.png" alt="tegan-and-sara">
+					<img src="img/img-hongkong.png" alt="eben">
 				</li>
 			</ul>
 		</div>
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul class="slides">
+		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
+  			<ul class="photos">
 				<li>
-					<img src="img/food-milk-tea.png" alt="milk-tea">
+					<img src="img/img-iggy-1.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/food-macaroon.png" alt="macaroon">
+					<img src="img/img-amy.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/food-bolthouse.png" alt="bolthouse">
+					<img src="img/img-eben-1.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/food-brownie.png" alt="brownie">
+					<img src="img/img-food-shawarma-crop.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/food-meat-pies.png" alt="brownie">
+					<img src="img/img-maydayparade.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/food-shawarma-crop.png" alt="brownie">
-				</li>
-			</ul>
-		</div>
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul class="slides">
-				<li>
-					<img src="img/other-9.png" alt="hong-kong">
+					<img src="img/img-iggydancer.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/other-2.png" alt="berries">
+					<img src="img/img-eben-5.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/other-3.png" alt="niagara-falls">
+					<img src="img/img-iggy-2.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/other-7.png" alt="hong-kong">
+					<img src="img/img-jem-2.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/other-1.png" alt="niagara-falls">
+					<img src="img/img-v.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-model-1.png" alt="eben">
 				</li>
 			</ul>
 		</div>
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul class="slides">
+		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
+  			<ul class="photos">
 				<li>
-					<img src="img/xs-1.png" alt="business-card">
+					<img src="img/img-eddie-2.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/xs-2.png" alt="stamp">
+					<img src="img/img-eben-3.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/xs-3.png" alt="t-shirt">
+					<img src="img/img-iggydancers-2.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/xs-4.png" alt="cd">
+					<img src="img/img-bicycler.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/xs-3.png" alt="t-shirt">
-				</li>
-			</ul>
-		</div>
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul class="slides">
-				<li>
-					<img src="img/bn-3.png" alt="vinyl">
+					<img src="img/img-bab-3.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/bn-2.png" alt="poster">
+					<img src="img/img-kelly-skate.png" alt="eben">
 				</li>
-					<li>
-					<img src="img/bn-5.png" alt="mockup">
+				<li>
+					<img src="img/img-jem-4.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-iggydancers.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-food-milk-tea.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-eddie-3.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-bab-2.png" alt="eben">
 				</li>
 			</ul>
 		</div>
@@ -242,7 +216,6 @@
 	<script src="js/waypoints.min.js"></script>
 	<script src="js/main.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-	<script src="flexslider/jquery.flexslider.js"></script>
 	<script type="text/javascript">
 		$(window).load(function() {
 			$('.flexslider').flexslider({
