--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
 	
 	<section id="about" class="about grid">
 	<div class="intro unit unit-s-1">
-		<h1>HELLO AND WELCOME</h1>
-		<p>My name is <i>Katie Situ</i> and I am a versatile designer and photographer. I currently reside in Ottawa, Canada where I study Graphic Design. As a designer with many interests within the art industry, I strive to be as versatile as possible. I love to learn and discover. I am open-minded and always up for a challenge. Graphic Design is my passion and Photography is my peace, but I will always strive to be great at both.</p>
+		<h1>HELLO &amp; WELCOME</h1>
+		<p><em>Katie Situ</em> is a versatile photographer specializing in portrait, music, food, and event photography. She currently resides in Ottawa, Canada, where she is currently focusing on both, photography and graphic design.</p>
 	</div>
 	</section>
 	
