--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul class="photos">
 				<li>
-					<img src="img/img-iggy-4.png" alt="eben">
+					<img src="img/img-bicycler.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-berries.png" alt="eben">
+					<img src="img/img-iggy-4.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-food-brownie.png" alt="eben">
@@ -86,7 +86,7 @@
 					<img src="img/img-eben-7.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-hodan-1.png" alt="eben">
+					<img src="img/img-hodan-3.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-lammi.png" alt="eben">
@@ -123,7 +123,7 @@
 					<img src="img/img-eben-1.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-food-shawarma-crop.png" alt="eben">
+					<img src="img/img-victoria.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-maydayparade.png" alt="eben">
@@ -157,7 +157,7 @@
 					<img src="img/img-iggy-1.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-bicycler.png" alt="eben">
+					<img src="img/img-berries.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-iggydancers-2.png" alt="eben">
