--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul class="photos">
 				<li>
-					<img src="img/img-bicycler.png" alt="eben">
+					<img src="img/img-iggy-4.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-iggy-4.png" alt="eben">
+					<img src="img/img-bicycler.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-food-brownie.png" alt="eben">
@@ -61,7 +61,7 @@
 					<img src="img/img-teganandsara.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-eben-2.png" alt="eben">
+					<img src="img/img-bab-2.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-food-macaroon.png" alt="eben">
@@ -70,10 +70,16 @@
 					<img src="img/img-nf.png" alt="eben">
 				</li>
 				<li>
+					<img src="img/img-eben-2.png" alt="eben">
+				</li>
+				<li>
 					<img src="img/img-food-meat-pies.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-eddie-3.png" alt="eben">
+					<img src="img/img-bab-1.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-penny.png" alt="eben">
 				</li>
 			</ul>
 		</div>
@@ -89,7 +95,13 @@
 					<img src="img/img-hodan-3.png" alt="eben">
 				</li>
 				<li>
+					<img src="img/img-vans.png" alt="eben">
+				</li>
+				<li>
 					<img src="img/img-lammi.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-hodan-2.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-noah.png" alt="eben">
@@ -101,13 +113,13 @@
 					<img src="img/img-eddie-1.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-bab-1.png" alt="eben">
+					<img src="img/img-model-1.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-hodan-2.png" alt="eben">
+					<img src="img/img-maydayparade.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-hongkong.png" alt="eben">
+					<img src="img/img-kelly.png" alt="eben">
 				</li>
 			</ul>
 		</div>
@@ -120,31 +132,31 @@
 					<img src="img/img-amy.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-eben-1.png" alt="eben">
-				</li>
-				<li>
 					<img src="img/img-victoria.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-maydayparade.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-iggydancer.png" alt="eben">
+					<img src="img/img-converse.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-eben-5.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-iggy-2.png" alt="eben">
+					<img src="img/img-iggy-1.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-jem-2.png" alt="eben">
+					<img src="img/img-converse.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-v.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-model-1.png" alt="eben">
+					<img src="img/img-iggy-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-bab-3.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-hongkong.png" alt="eben">
 				</li>
 			</ul>
 		</div>
@@ -154,25 +166,19 @@
 					<img src="img/img-eddie-2.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-iggy-1.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-berries.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-iggydancers-2.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-bab-3.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-kelly-skate.png" alt="eben">
+					<img src="img/img-iggydancer.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-jem-4.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-iggydancers.png" alt="eben">
+					<img src="img/img-kelly-skate.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-berries.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-eben-1.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-food-milk-tea.png" alt="eben">
@@ -181,7 +187,13 @@
 					<img src="img/img-eben-6.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-bab-2.png" alt="eben">
+					<img src="img/img-iggydancers.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-eddie-3.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-iggydancers-2.png" alt="eben">
 				</li>
 			</ul>
 		</div>
