--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 					<img src="img/img-iggy-1.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-converse.png" alt="eben">
+					<img src="img/img-amy-2.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-v.png" alt="eben">
