--- a/404.html
+++ b/404.html
@@ -13,8 +13,8 @@
 <body>
 	<div class="error">
 		<h1>404</h1>
-		<h2>Oh no, there's nothing here.</h2>
-		<p>Click <a href="index.html" style="text-decoration: none"><strong>here</strong></a> to go back!</p>
+		<h3>Oh no, there's nothing here.</h3>
+		<h4><strong>Click <a href="index.html" style="text-decoration: none">here</a> to go back!</strong></h4>
 	</div>
 	
 	<script src="js/nav.js"></script>
