changed twitter info

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 			<h5><strong>katie.situ@gmail.com</strong></h5>
 			<ul class="social">
 				<li><a href="https://www.facebook.com/katiesituphotography"><i class="fa fa-facebook"></i><span class="hide-text">Facebook</span></a></li>
-				<li><a href="https://twitter.com/situkd"><i class="fa fa-twitter"></i><span class="hide-text">Twitter</span></a></li>
+				<li><a href="https://twitter.com/kvesitu"><i class="fa fa-twitter"></i><span class="hide-text">Twitter</span></a></li>
 				<li><a href="https://www.behance.net/katiesitu"><i class="fa fa-behance"></i><span class="hide-text">Behance</span></a></li>
 				<li><a href="https://www.vimeo.com/katiesitu"><i class="fa fa-vimeo-square"></i><span class="hide-text">Vimeo</span></a></li>
 			</ul>
