--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
 		<img class="main-logo" src="img/logo.svg" alt="Logo">
 	</section>
 	<section id="portfolio" class="portfolio grid">
-		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
+			<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
   			<ul class="photos">
+				<li>
+					<img src="img/weday-francesco-yates-2.png" alt="eben">
+				</li>
 				<li>
 					<img src="img/img-iggy-4.png" alt="eben">
 				</li>
@@ -98,6 +101,9 @@
 					<img src="img/img-vans.png" alt="eben">
 				</li>
 				<li>
+					<img src="img/weday-jesse-gold.png" alt="eben">
+				</li>
+				<li>
 					<img src="img/img-lammi.png" alt="eben">
 				</li>
 				<li>
@@ -132,13 +138,16 @@
 					<img src="img/img-amy.png" alt="eben">
 				</li>
 				<li>
+					<img src="img/weday-jillea-1.png" alt="eben">
+				</li>
+				<li>
 					<img src="img/img-victoria.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-converse.png" alt="eben">
+					<img src="img/img-eben-5.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-eben-5.png" alt="eben">
+					<img src="img/img-converse.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-iggy-1.png" alt="eben">
@@ -170,6 +179,9 @@
 				</li>
 				<li>
 					<img src="img/img-jem-4.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/weday-shawn-hook-1.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-kelly-skate.png" alt="eben">
