--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<img class="main-logo" src="img/logo.svg" alt="Logo">
 	</section>
 	<section id="portfolio" class="portfolio grid">
-			<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
+			<div class="unit unit-s-1">
   			<ul class="photos">
 				<li>
 					<img src="img/weday-francesco-yates-2.png" alt="eben">
@@ -84,10 +84,6 @@
 				<li>
 					<img src="img/img-penny.png" alt="eben">
 				</li>
-			</ul>
-		</div>
-		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul class="photos">
 				<li>
 					<img src="img/img-airdubai.png" alt="eben">
 				</li>
@@ -127,10 +123,6 @@
 				<li>
 					<img src="img/img-kelly.png" alt="eben">
 				</li>
-			</ul>
-		</div>
-		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul class="photos">
 				<li>
 					<img src="img/img-eben-3.png" alt="eben">
 				</li>
@@ -167,10 +159,6 @@
 				<li>
 					<img src="img/img-hongkong.png" alt="eben">
 				</li>
-			</ul>
-		</div>
-		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-4">
-  			<ul class="photos">
 				<li>
 					<img src="img/img-eddie-2.png" alt="eben">
 				</li>
@@ -193,7 +181,7 @@
 					<img src="img/img-eben-1.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-food-milk-tea.png" alt="eben">
+					<img src="img/img-eddie-3.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-eben-6.png" alt="eben">
@@ -202,7 +190,7 @@
 					<img src="img/img-iggydancers.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-eddie-3.png" alt="eben">
+					<img src="img/eben-7.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-iggydancers-2.png" alt="eben">
