--- a/index.html
+++ b/index.html
@@ -55,6 +55,138 @@
 					<img src="img/img-bicycler.png" alt="eben">
 				</li>
 				<li>
+					<img src="img/img-teganandsara.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-nf.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-eben-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-bab-1.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-penny.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-airdubai.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-eben-7.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-hodan-3.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-vans.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/weday-jesse-gold.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-lammi.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-hodan-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-noah.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-jem-1.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-eddie-1.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-model-1.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-maydayparade.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-kelly.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-eben-3.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-amy.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/weday-jillea-1.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-victoria.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-eben-5.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-converse.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-iggy-1.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-amy-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-iggy-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-bab-3.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-hongkong.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-eddie-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-iggydancer.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-jem-4.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/weday-shawn-hook-1.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-kelly-skate.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-berries.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-eben-1.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-eddie-3.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-eben-6.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-iggydancers.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eben-7.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-iggydancers-2.png" alt="eben">
+				</li>
+				<!--<li>
+					<img src="img/weday-francesco-yates-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-iggy-4.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-bicycler.png" alt="eben">
+				</li>
+				<li>
 					<img src="img/img-food-brownie.png" alt="eben">
 				</li>
 				<li>
@@ -194,7 +326,7 @@
 				</li>
 				<li>
 					<img src="img/img-iggydancers-2.png" alt="eben">
-				</li>
+				</li>-->
 			</ul>
 		</div>
 	</section>
