adjusted photo order

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Katie Situ</title>
+	<title>Katie Situ Photography</title>
 	<link href="css/main.css" rel="stylesheet">
 	<link rel="stylesheet" href="flexslider/flexslider.css" type="text/css">
 	<meta name="handheldfriendly" content="true">
@@ -46,6 +46,12 @@
 			<div class="unit unit-s-1">
   			<ul class="photos">
 				<li>
+					<img src="img/img-eddie-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eben-7.png" alt="eben">
+				</li>
+				<li>
 					<img src="img/weday-francesco-yates-2.png" alt="eben">
 				</li>
 				<li>
@@ -55,10 +61,10 @@
 					<img src="img/img-bicycler.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-teganandsara.png" alt="eben">
+					<img src="img/img-eben-5.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-nf.png" alt="eben">
+					<img src="img/img-teganandsara.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-eben-2.png" alt="eben">
@@ -67,19 +73,22 @@
 					<img src="img/img-bab-1.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-penny.png" alt="eben">
+					<img src="img/img-maydayparade.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-airdubai.png" alt="eben">
+					<img src="img/img-iggy-2.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-eben-7.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-hodan-3.png" alt="eben">
+					<img src="img/img-nf.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-vans.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-kelly.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-eben-3.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/weday-jesse-gold.png" alt="eben">
@@ -88,10 +97,10 @@
 					<img src="img/img-lammi.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-hodan-2.png" alt="eben">
+					<img src="img/img-noah.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-noah.png" alt="eben">
+					<img src="img/img-hodan-2.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-jem-1.png" alt="eben">
@@ -103,13 +112,13 @@
 					<img src="img/img-model-1.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-maydayparade.png" alt="eben">
+					<img src="img/img-penny.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-kelly.png" alt="eben">
+					<img src="img/img-hodan-3.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-eben-3.png" alt="eben">
+					<img src="img/img-eben-7.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-amy.png" alt="eben">
@@ -121,9 +130,6 @@
 					<img src="img/img-victoria.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-eben-5.png" alt="eben">
-				</li>
-				<li>
 					<img src="img/img-converse.png" alt="eben">
 				</li>
 				<li>
@@ -133,16 +139,10 @@
 					<img src="img/img-amy-2.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-iggy-2.png" alt="eben">
-				</li>
-				<li>
 					<img src="img/img-bab-3.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-hongkong.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-eddie-2.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-iggydancer.png" alt="eben">
@@ -166,16 +166,16 @@
 					<img src="img/img-eddie-3.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-eben-6.png" alt="eben">
-				</li>
-				<li>
 					<img src="img/img-iggydancers.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/eben-7.png" alt="eben">
+					<img src="img/img-eben-6.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-iggydancers-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-airdubai.png" alt="eben">
 				</li>
 				<!--<li>
 					<img src="img/weday-francesco-yates-2.png" alt="eben">
@@ -334,7 +334,7 @@
 	<section id="about" class="about grid">
 	<div class="intro unit unit-s-1">
 		<h1>HELLO &amp; WELCOME</h1>
-		<p><em>Katie Situ</em> is a versatile photographer specializing in portrait, music, food, and event photography. She currently resides in Ottawa, Canada, where she is currently focusing on both, photography and graphic design.</p>
+		<p><em>Katie "Kae" Situ</em> is a versatile photographer specializing in portrait, music, food, and event photography. She currently resides in Ottawa, Canada, where she is currently focusing on both, photography and graphic design.</p>
 	</div>
 	</section>
 	
@@ -348,10 +348,11 @@
 				<li><a href="https://twitter.com/kvesitu"><i class="fa fa-twitter"></i><span class="hide-text">Twitter</span></a></li>
 				<li><a href="https://www.behance.net/katiesitu"><i class="fa fa-behance"></i><span class="hide-text">Behance</span></a></li>
 				<li><a href="https://www.vimeo.com/katiesitu"><i class="fa fa-vimeo-square"></i><span class="hide-text">Vimeo</span></a></li>
+				<li><a href="https://www.instagram.com/kaesphvto"><i class="fa fa-instagram"></i><span class="hide-text">Instagram</span></a></li>
 			</ul>
 			<a class="slideDown ease-all top-btn" href="#home"><img src="img/top.svg" alt="Top Button"></a>
 		</div>
-			<p>©2015 Katie Situ</p> 
+			<p>©2016 Katie Situ</p> 
 	</footer>
 	
 	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
