--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					<img src="img/img-iggy-2.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-nf.png" alt="eben">
+					<img src="img/img-nf-1.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-vans.png" alt="eben">
