--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
 					<img src="img/img-penny.png" alt="eben">
 				</li>
 				<li>
+					<img src="img/weday-shawn-hook-4.png" alt="eben">
+				</li>
+				<li>
 					<img src="img/img-hodan-3.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-eben-7.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-amy.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/weday-jillea-1.png" alt="eben">
@@ -154,9 +154,6 @@
 					<img src="img/weday-shawn-hook-1.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-kelly-skate.png" alt="eben">
-				</li>
-				<li>
 					<img src="img/img-berries.png" alt="eben">
 				</li>
 				<li>
@@ -164,6 +161,9 @@
 				</li>
 				<li>
 					<img src="img/img-eddie-3.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-kelly-skate.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-iggydancers.png" alt="eben">
