updated logo, layout and images

--- a/index.html
+++ b/index.html
@@ -24,28 +24,87 @@
 
 	<section class="top">
 		<div class="nav-logo">
-			<a class="small-logo" href="index.html"><img src="img/logo.svg" alt="Logo Navigation"></a>
+			<a class="small-logo" href="index.html"><img src="img/logo-1.svg" alt="Logo Navigation"></a>
 			<ul>
 				<li><a class="nav-btn hide-text" href="#nav">Navigation</a></li>
 			</ul>
 		</div>
 		<nav class="nav nav-top slideDown" data-state="collasped">
 			<ul>
-				<li class="ease-all"><a href="#home">HOME</a></li>
-				<li class="ease-all"><a href="#about">ABOUT</a></li>
-				<li class="ease-all"><a href="#portfolio">PORTFOLIO</a></li>
+				<li class="ease-all"><a href="#about">ABOUT ME</a></li>
+				<li class="ease-all"><a href="#home">PORTFOLIO</a></li>
 				<li class="ease-all"><a href="#contact">CONTACT</a></li>
 			</ul>	
 		</nav>
 	</section>
 	
 	<section id="home" class="home">
-		<img class="main-logo" src="img/logo.svg" alt="Logo">
+		<!--<img class="main-logo" src="img/logo2.svg" alt="Logo">-->
 	</section>
 	<section id="portfolio" class="portfolio grid">
 			<div class="unit unit-s-1">
   			<ul class="photos">
 				<li>
+					<img src="img/img-eddie-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-vans.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-nf-1.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-iggydancers.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-eben-4.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-iggy-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-iggydancer.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-inshar-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-eben-8.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/weday-shawn-hook-1.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-inshar-1.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-hodan-3.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-hongkong-5.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-maydayparade.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-jem-1.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/weday-shawn-hook-4.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-model-1.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-penny.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-inshar-3.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/weday-jillea-1.png" alt="eben">
+				</li>
+				<!--<li>
 					<img src="img/img-eddie-2.png" alt="eben">
 				</li>
 				<li>
@@ -173,7 +232,8 @@
 				</li>
 				<li>
 					<img src="img/weday-dance-fingers.png" alt="eben">
-				</li>
+				</li>-->
+				
 				<!--<li>
 					<img src="img/weday-francesco-yates-2.png" alt="eben">
 				</li>
@@ -331,7 +391,8 @@
 	<section id="about" class="about grid">
 	<div class="intro unit unit-s-1">
 		<h1>HELLO &amp; WELCOME</h1>
-		<p><em>Katie "Kae" Situ</em> is a versatile photographer specializing in portrait, music, food, and event photography. She currently resides in Ottawa, Canada, where she is currently focusing on both, photography and graphic design.</p>
+		<p><em>Katie "Kae" Situ</em> is a versatile photographer specializing in portrait, travel, and music photography. She currently resides in Ottawa, Canada, where she is currently focusing on photography and graphic design. She loves to travel and explore new places, but for now, you can find her binge watching shows, movies, and constantly listening to her favourite music.</p>
+		<p>Scroll down to see where you can reach me at!</p>
 	</div>
 	</section>
 	
