--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 		</div>
 		<nav class="nav nav-top slideDown" data-state="collasped">
 			<ul>
-				<li class="ease-all"><a href="#about">ABOUT ME</a></li>
 				<li class="ease-all"><a href="#home">PORTFOLIO</a></li>
+				<li class="ease-all"><a href="#about">ABOUT ME</a></li>
 				<li class="ease-all"><a href="#contact">CONTACT</a></li>
 			</ul>	
 		</nav>
@@ -392,7 +392,7 @@
 	<div class="intro unit unit-s-1">
 		<h1>HELLO &amp; WELCOME</h1>
 		<p><em>Katie "Kae" Situ</em> is a versatile photographer specializing in portrait, travel, and music photography. She currently resides in Ottawa, Canada, where she is currently focusing on photography and graphic design. She loves to travel and explore new places, but for now, you can find her binge watching shows, movies, and constantly listening to her favourite music.</p>
-		<p>Scroll down to see where you can reach me at!</p>
+		<p>Scroll down to see where you can reach her at!</p>
 	</div>
 	</section>
 	
