--- a/index.html
+++ b/index.html
@@ -48,61 +48,76 @@
 					<img src="img/img-eddie-2.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-vans.png" alt="eben">
-				</li>
-				<li>
 					<img src="img/img-nf-1.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-iggydancers.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-eben-4.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-iggy-2.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-iggydancer.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-inshar-2.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-eben-8.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/weday-shawn-hook-1.png" alt="eben">
+					<img src="img/img-vans.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-inshar-1.png" alt="eben">
 				</li>
 				<li>
+					<img src="img/img-eben-4.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-iggydancers.png" alt="eben">
+				</li>
+				<li>
 					<img src="img/img-hodan-3.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-iggy-2.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-hongkong-5.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-maydayparade.png" alt="eben">
+					<img src="img/weday-francesco-yates-3.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-jem-1.png" alt="eben">
+					<img src="img/img-iggydancer.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/weday-francesco-yates-2.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/weday-shawn-hook-4.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-model-1.png" alt="eben">
+					<img src="img/img-eben-8.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-penny.png" alt="eben">
+					<img src="img/img-inshar-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-eddie-3.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/weday-shawn-hook-1.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-iggy-4.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/weday-jillea-1.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-inshar-3.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/weday-jillea-1.png" alt="eben">
+					<img src="img/img-jem-1.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-maydayparade.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-model-1.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-bicycler.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-penny.png" alt="eben">
 				</li>
 				<!--<li>
 					<img src="img/img-eddie-2.png" alt="eben">
