--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 					<img src="img/img-inshar-1.png" alt="eben">
 				</li>
 				<li>
+					<img src="img/img-kelly-2.png" alt="inshar">
+				</li>
+				<li>
 					<img src="img/img-eben-4.png" alt="eben">
 				</li>
 				<li>
@@ -81,6 +84,9 @@
 					<img src="img/weday-francesco-yates-2.png" alt="eben">
 				</li>
 				<li>
+					<img src="img/img-food-macaroon.png" alt="inshar">
+				</li>
+				<li>
 					<img src="img/weday-shawn-hook-4.png" alt="eben">
 				</li>
 				<li>
@@ -94,6 +100,9 @@
 				</li>
 				<li>
 					<img src="img/weday-shawn-hook-1.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-inshar-4.png" alt="inshar">
 				</li>
 				<li>
 					<img src="img/img-iggy-4.png" alt="eben">
@@ -115,6 +124,9 @@
 				</li>
 				<li>
 					<img src="img/img-bicycler.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/weday-dance-fingers.png" alt="inshar">
 				</li>
 				<li>
 					<img src="img/img-penny.png" alt="eben">
