changed an image

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					<img src="img/weday-francesco-yates-2.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-food-macaroon.png" alt="inshar">
+					<img src="img/img-airdubai.png" alt="inshar">
 				</li>
 				<li>
 					<img src="img/weday-shawn-hook-4.png" alt="eben">
