--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
 					<img src="img/img-nf-1.png" alt="eben">
 				</li>
 				<li>
+					<img src="img/img-inshar-7.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/frankie-2.png" alt="eben">
+				</li>
+				<li>
 					<img src="img/img-vans.png" alt="eben">
 				</li>
 				<li>
@@ -87,16 +93,28 @@
 					<img src="img/img-hodan-3.png" alt="inshar">
 				</li>
 				<li>
+					<img src="img/frankie-1.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-teganandsara.png" alt="eben">
+				</li>
+				<li>
 					<img src="img/weday-shawn-hook-4.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-eben-8.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-inshar-2.png" alt="eben">
+					<img src="img/mercury-1.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-eddie-3.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-inshar-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/frankie-5.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/weday-shawn-hook-1.png" alt="eben">
@@ -114,7 +132,7 @@
 					<img src="img/img-inshar-3.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-jem-1.png" alt="eben">
+					<img src="img/frankie-3.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-maydayparade.png" alt="eben">
@@ -123,10 +141,16 @@
 					<img src="img/img-model-1.png" alt="eben">
 				</li>
 				<li>
+					<img src="img/img-inshar-6.png" alt="eben">
+				</li>
+				<li>
 					<img src="img/img-bicycler.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/weday-dance-fingers.png" alt="inshar">
+				</li>
+				<li>
+					<img src="img/img-jem-1.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-penny.png" alt="eben">
@@ -419,9 +443,7 @@
 	<div class="intro unit unit-s-1">
 		<h1>HELLO &amp; WELCOME</h1>
 		<p><em>Katie "Kae" Situ</em> is a versatile photographer specializing in portrait, travel, and music photography. She currently resides in Ottawa, Canada, where she is currently focusing on photography and graphic design. She loves to travel and explore new places, but for now, you can find her binge watching shows, movies, and constantly listening to her favourite music.</p>
-		<p>Scroll down to see where you can reach her at</p>
-		<p>↓</p>
-		<!--<img src="img/img-katie-situ.png" alt="katie-situ">-->
+		<img src="img/profilephoto.png" alt="katie-situ">
 	</div>
 	</section>
 	
