add new photos of yuuri

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<div class="unit unit-s-1">
   			<ul class="photos">
 				<li>
-					<img src="img/img-eddie-2.png" alt="eben">
+					<img src="img/img-inshar-5.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-nf-1.png" alt="eben">
@@ -72,7 +72,7 @@
 					<img src="img/img-iggydancers.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-inshar-5.png" alt="eben">
+					<img src="img/img-eddie-2.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-iggy-2.png" alt="eben">
@@ -93,7 +93,7 @@
 					<img src="img/img-hodan-3.png" alt="inshar">
 				</li>
 				<li>
-					<img src="img/frankie-1.png" alt="eben">
+					<img src="img/yuuri-5.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-teganandsara.png" alt="eben">
@@ -114,7 +114,7 @@
 					<img src="img/img-inshar-2.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/frankie-5.png" alt="eben">
+					<img src="img/yuuri-1.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/weday-shawn-hook-1.png" alt="eben">
